// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test click handler 1`] = `
<a
  aria-label="Facebook"
  className="Pinpoint Internal Link Pinpoint SocialMedia ShareItem FacebookShare "
  href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpinpoint.com%2F"
  title="Facebook"
>
  <svg
    aria-hidden="true"
    data-icon="facebook-f"
    data-prefix="fab"
    focusable="false"
    height={16}
    role="img"
    viewBox="0 0 320 512"
    width={10}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
      fill="currentColor"
    />
  </svg>
</a>
`;

exports[`Test custom className 1`] = `
<a
  aria-label="Facebook"
  className="Pinpoint Internal Link Pinpoint SocialMedia ShareItem FacebookShare custom-test"
  href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpinpoint.com%2F%3Futm_source%3Dpinpt_web%26utm_medium%3Dpinpt_social_facebook"
  title="Facebook"
>
  <svg
    aria-hidden="true"
    data-icon="facebook-f"
    data-prefix="fab"
    focusable="false"
    height={16}
    role="img"
    viewBox="0 0 320 512"
    width={10}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
      fill="currentColor"
    />
  </svg>
</a>
`;

exports[`Test default state 1`] = `
<a
  aria-label="Facebook"
  className="Pinpoint Internal Link Pinpoint SocialMedia ShareItem FacebookShare "
  href="https://facebook.com/sharer/sharer.php?u="
  title="Facebook"
>
  <svg
    aria-hidden="true"
    data-icon="facebook-f"
    data-prefix="fab"
    focusable="false"
    height={16}
    role="img"
    viewBox="0 0 320 512"
    width={10}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
      fill="currentColor"
    />
  </svg>
</a>
`;

exports[`Test link (new tab) 1`] = `
<a
  aria-label="Facebook"
  className="Pinpoint Internal Link Pinpoint SocialMedia ShareItem FacebookShare "
  href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FPinpoint.Engineering%3Futm_source%3Dpinpt_web%26utm_medium%3Dpinpt_social_facebook"
  rel="noopener noreferrer"
  target="_blank"
  title="Facebook"
>
  <svg
    aria-hidden="true"
    data-icon="facebook-f"
    data-prefix="fab"
    focusable="false"
    height={16}
    role="img"
    viewBox="0 0 320 512"
    width={10}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
      fill="currentColor"
    />
  </svg>
</a>
`;

exports[`Test link 1`] = `
<a
  aria-label="Facebook"
  className="Pinpoint Internal Link Pinpoint SocialMedia ShareItem FacebookShare "
  href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FPinpoint.Engineering"
  title="Facebook"
>
  <svg
    aria-hidden="true"
    data-icon="facebook-f"
    data-prefix="fab"
    focusable="false"
    height={16}
    role="img"
    viewBox="0 0 320 512"
    width={10}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
      fill="currentColor"
    />
  </svg>
</a>
`;
